[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patchs_unsloth_llamacpp"
version = "0.0.1"
license = {file = "LICENSE"}
authors = [
  { name="Linze Liu", email="liuzhi1999@foxmail.com" },
]
description = "A patch to enable llama.cpp as acceleration backend on windows platform"
readme = "README.md"
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"